fixed horizontal scroll on list pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,9 @@ a:hover, a:hover { color:#e40477; border-bottom:2px solid #e40477; }
     grid-template-columns: 2fr 7fr;
 }
 .list-page > .header img { cursor:pointer; }
-.list-page > .header h3 { margin:-5px 0px 0px 56px; text-transform:none; }
+.list-page > .header h3 {
+    margin-top:-5px; padding-left:56px; text-transform:none;
+}
 .list-page > .header > span:nth-child(2) { justify-self: end; }
 
 .list-page > .description {
@@ -321,16 +323,19 @@ a:hover, a:hover { color:#e40477; border-bottom:2px solid #e40477; }
 }
 
 @media (max-width: 1280px) {
-    .list-page > .header { padding-left: 10px; grid-column-gap: 20px; }
+    .list-page > .header {
+        padding-left: 10px; grid-column-gap: 20px; box-sizing: border-box;
+    }
     .list-page > .header > span:nth-child(2) { justify-self: start; }
-    .list-page > .results { padding-left: 10px; }
+    .list-page > .results { padding-left: 10px; box-sizing: border-box; }
 }
 
 @media (max-width: 767px) {
     .list-page > .header { display:block; }
+    .list-page > .header h3 { margin-top: 0px; margin-left:0px; }
+    .list-page > .header > span:nth-child(2){ padding-top:18px; display:block; }
     .list-page > .results { display:block; padding:0; }
     .list-page > .results .list-tags { display:none; }
-    .list-page > .header > span:nth-child(2){ padding-top:18px; display:block; }
     .list-page > .results .not-found {width:90%; margin:0 auto 20px auto;}
     .list-page > .description { margin:0 auto 73px auto; width:90%; }
 }
